fixing overflow-x on the ranking component

--- a/src/components/Personal_space/styles.scss
+++ b/src/components/Personal_space/styles.scss
@@ -235,6 +235,7 @@
     transform: translateX(-50%);
     margin: 1em;
     overflow: auto;
+    overflow-x: hidden;
     margin-left: 50%;
   
     h1 {
